# ChangeLog for dev-ruby/stud
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*stud-0.0.17 (27 May 2014)

  27 May 2014; Johann Schmitz <ercpe@gentoo.org> +metadata.xml,
  +stud-0.0.17.ebuild:
  Added ebuild for stud (dep of logstash)