@@ -4,7 +4,9 @@
 
 EAPI=5
 
-USE_RUBY="ruby19 jruby"
+USE_RUBY="ruby19 ruby20 jruby"
+RUBY_FAKEGEM_RECIPE_DOC="rdoc"
+RUBY_FAKEGEM_RECIPE_TEST=""
 
 inherit ruby-fakegem
 
@@ -16,11 +18,3 @@ LICENSE="Apache-2.0"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
-
-#DEPEND=""
-RDEPEND="${DEPEND}"
-# dev-ruby/i18n
-
-#RUBY_FAKEGEM_BINWRAP="logstash"
-#RUBY_FAKEGEM_EXTRAINSTALL="locales patterns"
-#RUBY_FAKEGEM_TASK_DOC=""
