@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 May 2014; Johann Schmitz <ercpe@gentoo.org> stud-0.0.17.ebuild:
+  Polished ebuild
+
 *stud-0.0.17 (27 May 2014)
 
   27 May 2014; Johann Schmitz <ercpe@gentoo.org> +metadata.xml,
